# Neural_additive-model-based-MMM

./: .gitignore  README.md  pyproject.toml  requirements.txt  verify_architecture.py
configs/: data_config.yaml  feature_config.yaml  model_config.yaml  pyproject_tensorflow.toml  training_config.yaml
docs/: README.md  README_COMPLETE_SYSTEM.md  START_HERE.md
instruction markdown/: DIAGNOSTIC_PLOTS_GUIDE.md  FINAL_SUMMARY.md  HOW_TO_RUN_VISUALIZATIONS.md  INTERACTIVE_VISUALIZATION_GUIDE.md  MULTI_AGENT_RUN_GUIDE.md  NAM-help-instruction.md  NEXT_STEPS_ROADMAP.md  PHASE_1_3_SUMMARY.md  PHASE_1_DELIVERY_COMPLETE.md  PHASE_2_IMPLEMENTATION_VERIFICATION.md  PHASE_2_ROADMAP.md  VISUALIZATION_TOOLS_GUIDE.md  data-details.md  kumarjit.md
models/: nam_200epochs_diagnosed.keras  nam_300epochs_best_20251103_144723.keras  nam_300epochs_final.keras  nam_best_20251103_152524.keras  nam_best_20251103_153111.keras  nam_final_20251103_152622.keras  nam_final_20251103_153312.keras
outputs/: elasticity_data.pkl  metrics_20251103_152622.json  metrics_20251103_153312.json  metrics_300epochs.json  walk_forward_results.pkl
reports/: business_dashboard.json
requirements/: agent_01_data.txt  agent_02_model.txt  agent_03_training.txt  agent_04_evaluation.txt  agent_05_business.txt  agent_06_testing.txt  base.txt
scripts/: check_agent_status.py  check_notebook_cell.py  fix_notebook_encoding.py  generate_all_diagnostics.py  generate_lock_files.py  monitor_agents.py  orchestrator.py  plot_elasticity.py  plot_training_results.py  plot_walk_forward.py  setup_agent_environment.py  (+3 more)
(+66 files in other folders)
